--- a/attentions.ipynb
+++ b/attentions.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-08-03T08:17:20.879Z"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!git commit -am \"Commit\"\n",
+    "!git push"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1212,8 +1227,7 @@
      "end_time": "2020-08-03T07:01:52.833912Z",
      "start_time": "2020-08-03T07:01:48.301293Z"
     },
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1257,8 +1271,7 @@
      "end_time": "2020-08-03T07:07:11.081059Z",
      "start_time": "2020-08-03T07:07:08.101179Z"
     },
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1337,13 +1350,14 @@
     "n_heads = 12\n",
     "plt.figure(figsize = (8,8))\n",
     "\n",
-    "def aggByLayer()\n",
+    "def aggByLayer(x, grp):\n",
+    "    np.reshape(x, (grp, -1, grp))\n",
     "\n",
     "plt.subplot(211)\n",
-    "sns.heatmap(pd.DataFrame(aggByLayer(sim_mat_gpt), index = range(n_heads), columns = range(n_heads)));\n",
+    "sns.heatmap(pd.DataFrame(aggByLayer(sim_mat_gpt, 12), index = range(n_heads), columns = range(n_heads)));\n",
     "\n",
     "plt.subplot(212)\n",
-    "sns.heatmap(pd.DataFrame(aggByLayer(sim_mat_bert), index = range(n_heads), columns = range(n_heads)));\n",
+    "sns.heatmap(pd.DataFrame(aggByLayer(sim_mat_bert, 12), index = range(n_heads), columns = range(n_heads)));\n",
     "\n"
    ]
   },
@@ -1845,7 +1859,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "191px"
+    "width": "284px"
    },
    "toc_section_display": true,
    "toc_window_display": true
