--- a/attentions.ipynb
+++ b/attentions.ipynb
@@ -11,10 +11,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "collapsed": true,
+    "id": "pRztYi7T5lwW"
+   },
+   "outputs": [],
+   "source": [
+    "universityStorage = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-11T18:51:46.129829Z",
+     "start_time": "2020-08-11T18:51:46.127294Z"
+    },
+    "colab": {},
+    "colab_type": "code",
+    "collapsed": true,
+    "id": "wnuOEkE85lwZ",
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "guy_folder = \"/vol/scratch/guy\" if universityStorage else \"/content\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "heading_collapsed": true,
     "id": "snTq16Ru5lwd"
    },
    "source": [
@@ -32,7 +64,6 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
-    "hidden": true,
     "id": "f6nEbhZs5lwe"
    },
    "outputs": [],
@@ -235,39 +266,6 @@
    },
    "source": [
     "### import"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "pRztYi7T5lwW"
-   },
-   "outputs": [],
-   "source": [
-    "universityStorage = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-11T18:51:46.129829Z",
-     "start_time": "2020-08-11T18:51:46.127294Z"
-    },
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "wnuOEkE85lwZ",
-    "init_cell": true
-   },
-   "outputs": [],
-   "source": [
-    "guy_folder = \"/vol/scratch/guy\" if universityStorage else \"/content\""
    ]
   },
   {
@@ -1557,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-10T18:50:13.397980Z",
@@ -1565,10 +1563,22 @@
     },
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "id": "4xh88-4o5lyP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AttentionCombiner' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-9a5bc014bc03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mattConv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAttentionCombiner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattConv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e-3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencodedA_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcriterion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mKLDivLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'batchmean'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mencodedA\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'AttentionCombiner' is not defined"
+     ]
+    }
+   ],
    "source": [
     "attConv = AttentionCombiner()\n",
     "optimizer = torch.optim.Adam(attConv.parameters(), lr = 1e-3)\n",
@@ -1580,11 +1590,20 @@
     "        inputs = _getAttentionsReshaped(modelA(**encodedA), wordsToTokens = None, reshape = False)\n",
     "        target = _getAttentionsReshaped(modelB(**encodedB), wordsToTokens = None, reshape = False)[10, 0] \n",
     "        shape = target.shape\n",
-    "        loss = criterion(attConv(inputs.reshape(shape[0])), target)\n",
+    "        loss = criterion(attConv(inputs), target)\n",
     "        t.set_postfix_str(\"Loss: \" + str(loss.item()))\n",
     "        loss.backward()\n",
     "        optimizer.step()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
