--- a/attentions.ipynb
+++ b/attentions.ipynb
@@ -1875,14 +1875,42 @@
     "        super(AttentionCombiner, self).__init__()\n",
     "        self.n_heads = self.n_layers = 12\n",
     "        self.n_total_heads = self.n_heads * self.n_layers\n",
-    "        self.weight = nn.Parameter(torch.ones((self.n_total_heads,1, 1)))\n",
+    "        self.weight = nn.Parameter(torch.ones((self.n_total_heads,1, 1))/100)\n",
     "        \n",
     "        \n",
     "    def forward(self, x):\n",
     "        x = x.view(self.n_total_heads, x.size(2), x.size(3))\n",
-    "        w = self.weight\n",
+    "        w = F.softmax(self.weight)\n",
+    "        # w /= w.sum(axis = 0, keepdims = True)\n",
     "        x = (w * x).sum(axis = 0)\n",
-    "        return F.softmax(x, dim = -1)"
+    "        return x #F.softmax(x, dim = -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "attConv = AttentionCombiner()\n",
+    "optimizer = torch.optim.SGD(attConv.parameters(), lr = 1e-1)\n",
+    "from tqdm import tqdm_notebook\n",
+    "criterion = nn.KLDivLoss(reduction = 'batchmean')\n",
+    "for i in range(5):\n",
+    "  print(\"Epoch \" + str(i))\n",
+    "  t = tqdm_notebook(encodedA_list)\n",
+    "  for encodedA in t:\n",
+    "\n",
+    "          attConv.zero_grad()\n",
+    "          inputs = _getAttentionsReshaped(bertModel(**encodedA), wordsToTokens = None, reshape = False)\n",
+    "          target = _getAttentionsReshaped(largeBertModel(**encodedA), wordsToTokens = None, reshape = False)[10, 0] \n",
+    "          shape = target.shape\n",
+    "          loss = criterion(torch.log(attConv(inputs)), target)\n",
+    "          t.set_postfix_str(\"Loss: \" + str(loss.item()))\n",
+    "          loss.backward()\n",
+    "          optimizer.step()"
    ]
   },
   {
@@ -1913,19 +1941,15 @@
    ],
    "source": [
     "attConv = AttentionCombiner()\n",
-    "optimizer = torch.optim.Adam(attConv.parameters(), lr = 1e-3)\n",
-    "t = tqdm(encodedA_list)\n",
+    "optimizer = torch.optim.SGD(attConv.parameters(), lr = 1e-1)\n",
+    "from tqdm import tqdm_notebook\n",
     "criterion = nn.KLDivLoss(reduction = 'batchmean')\n",
+    "allInputs = []\n",
+    "allTargets = []\n",
+    "t = tqdm_notebook(encodedA_list)\n",
     "for encodedA in t:\n",
-    "\n",
-    "        attConv.zero_grad()\n",
-    "        inputs = _getAttentionsReshaped(bertModel(**encodedA), wordsToTokens = None, reshape = False)\n",
-    "        target = _getAttentionsReshaped(largeBertModel(**encodedA), wordsToTokens = None, reshape = False)[10, 0] \n",
-    "        shape = target.shape\n",
-    "        loss = criterion(torch.log(attConv(inputs)), target)\n",
-    "        t.set_postfix_str(\"Loss: \" + str(loss.item()))\n",
-    "        loss.backward()\n",
-    "        optimizer.step()"
+    "        allInputs.append(_getAttentionsReshaped(bertModel(**encodedA), wordsToTokens = None, reshape = False).detach().numpy())\n",
+    "        allTargets.append(_getAttentionsReshaped(largeBertModel(**encodedA), wordsToTokens = None, reshape = False)[10, 0].detach().numpy())"
    ]
   },
   {
