--- a/attentions.ipynb
+++ b/attentions.ipynb
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-10T18:50:13.397980Z",
@@ -1604,7 +1604,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-19-86b3a2a9c14b>:9: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "<ipython-input-104-309960a6539d>:12: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  t = tqdm_notebook(enumerate(encodedA_list))\n"
      ]
@@ -1612,7 +1612,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5f88f944cc549d9a174264e61db546c",
+       "model_id": "18ab1402ad2c4354879dd92bcd228017",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1622,19 +1622,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
     "max_sent_len = 60\n",
+    "full_target = True\n",
+    "\n",
+    "target_shape = (100, 24, 16, max_sent_len, max_sent_len) if full_target else (100, max_sent_len, max_sent_len)\n",
     "inputs_memmap = np.memmap(guy_folder + \"/inputs.memmap\", dtype = 'float32', shape = (100, 12, 12, max_sent_len, max_sent_len), mode = \"w+\")\n",
-    "target_memmap = np.memmap(guy_folder + \"/target.memmap\", dtype = 'float32', shape = (100, max_sent_len, max_sent_len), mode = \"w+\")\n",
+    "target_memmap = np.memmap(guy_folder + \"/target.memmap\", dtype = 'float32', shape = target_shape, mode = \"w+\")\n",
     "\n",
     "inputs_memmap[:] = None\n",
     "target_memmap[:] = None\n",
@@ -1643,9 +1639,12 @@
     "t = tqdm_notebook(enumerate(encodedA_list))\n",
     "for i, encodedA in t:\n",
     "        inputs = _getAttentionsReshaped(bertModel(**encodedA), wordsToTokens = None, reshape = False).detach().numpy()\n",
-    "        target = _getAttentionsReshaped(largeBertModel(**encodedA), wordsToTokens = None, reshape = False)[10, 0].detach().numpy()\n",
+    "        target = _getAttentionsReshaped(largeBertModel(**encodedA), wordsToTokens = None, reshape = False).detach().numpy()\n",
+    "\n",
+    "        if not full_target:\n",
+    "            target = target[10, 0]\n",
     "        \n",
-    "        sent_len = target.shape[0]\n",
+    "        sent_len = target.shape[-1]\n",
     "        inputs_memmap[i, :, :, :sent_len, :sent_len] = inputs\n",
     "        target_memmap[i, :sent_len, :sent_len] = target\n",
     "\n",
@@ -1688,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -1697,21 +1696,24 @@
     "class AttentionConverter(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(AttentionConverter, self).__init__()\n",
-    "        self.combiner = AttentionCombiner()\n",
-    "        self.cnn = nn.Conv1d(1, 1, 3, padding = 1)\n",
+    "        self.combiner1 = AttentionCombiner()\n",
+    "        self.combiner2 = AttentionCombiner()\n",
+    "        self.combiner3 = AttentionCombiner()\n",
     "\n",
-    "        nn.init.xavier_uniform_(self.cnn.weight)\n",
+    "#         self.cnn = nn.Conv1d(1, 1, 3, padding = 1)\n",
+    "#         nn.init.xavier_uniform_(self.cnn.weight)\n",
+    "\n",
     "    def forward(self, x):\n",
     "        shape = x.shape\n",
-    "        x = self.cnn(x.view(-1, 1, x.size(-1)))\n",
-    "        x = x.view(*shape)\n",
-    "        x = self.combiner(x)\n",
-    "        return F.softmax(x.view(x.size(-1), x.size(-1)), dim = -1)"
+    "#         x = self.cnn(x.view(-1, 1, x.size(-1)))\n",
+    "#         x = x.view(*shape)\n",
+    "        x = (self.combiner1(x) + self.combiner2(x) + self.combiner3(x))/3    \n",
+    "        return x #F.softmax(x.view(x.size(-1), x.size(-1)), dim = -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1723,7 +1725,7 @@
      "text": [
       "  0%|          | 0/100 [00:00<?, ?it/s]<ipython-input-83-86b061a03448>:11: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  w = F.softmax(self.weight)\n",
-      "  2%|▏         | 2/100 [00:00<00:09, 10.05it/s, Loss: 0.7369477272033692]"
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.6684402227401733]"
      ]
     },
     {
@@ -1737,8 +1739,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:15<00:00,  6.37it/s, Loss: 0.5626647146961006]\n",
-      "  1%|          | 1/100 [00:00<00:16,  6.09it/s, Loss: 0.5574845884044832]"
+      "100%|██████████| 100/100 [00:15<00:00,  6.29it/s, Loss: 0.6036973560546819]\n",
+      "  1%|          | 1/100 [00:00<00:11,  8.50it/s, Loss: 0.6009470846712822]"
      ]
     },
     {
@@ -1752,8 +1754,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:16<00:00,  5.98it/s, Loss: 0.5597491644467759]\n",
-      "  3%|▎         | 3/100 [00:00<00:03, 26.88it/s, Loss: 0.5507944445590733]"
+      "100%|██████████| 100/100 [00:14<00:00,  6.72it/s, Loss: 0.5367118173585429]\n",
+      "  2%|▏         | 2/100 [00:00<00:09, 10.14it/s, Loss: 0.5286099772657801]"
      ]
     },
     {
@@ -1767,8 +1769,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:18<00:00,  5.51it/s, Loss: 0.5532592730270723]\n",
-      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.5479231453656708]"
+      "100%|██████████| 100/100 [00:17<00:00,  5.79it/s, Loss: 0.4912189317544908]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.48813160450861653]"
      ]
     },
     {
@@ -1782,8 +1784,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:15<00:00,  6.28it/s, Loss: 0.5568424806796712]\n",
-      "  1%|          | 1/100 [00:00<00:11,  8.35it/s, Loss: 0.5475673899141342]"
+      "100%|██████████| 100/100 [00:16<00:00,  6.23it/s, Loss: 0.45554499760596256]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.45253547617357853]"
      ]
     },
     {
@@ -1797,8 +1799,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:17<00:00,  5.85it/s, Loss: 0.5736961430884732]\n",
-      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.5682125854739016]"
+      "100%|██████████| 100/100 [00:16<00:00,  6.21it/s, Loss: 0.42563898847075066]\n",
+      "  1%|          | 1/100 [00:00<00:17,  5.51it/s, Loss: 0.42287557484004074]"
      ]
     },
     {
@@ -1812,8 +1814,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:16<00:00,  6.10it/s, Loss: 0.563281676072879]\n",
-      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.5497624980293542]"
+      "100%|██████████| 100/100 [00:16<00:00,  6.19it/s, Loss: 0.40433599756561733]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.39867748457966967]"
      ]
     },
     {
@@ -1827,15 +1829,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:16<00:00,  6.25it/s, Loss: 0.564752683173536]\n",
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
+      "100%|██████████| 100/100 [00:16<00:00,  6.02it/s, Loss: 0.39322530588116456]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.39100911907927094]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch     7: reducing learning rate of group 0 to 5.0000e-01.\n",
       "Epoch 7\n"
      ]
     },
@@ -1843,8 +1844,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:19<00:00,  5.21it/s, Loss: 0.5557776252523241]\n",
-      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.5510568442037124]"
+      "100%|██████████| 100/100 [00:15<00:00,  6.51it/s, Loss: 0.388199483690949] \n",
+      "  3%|▎         | 3/100 [00:00<00:04, 23.22it/s, Loss: 0.38542578970064983]"
      ]
     },
     {
@@ -1858,8 +1859,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:15<00:00,  6.43it/s, Loss: 0.5575514441152277]\n",
-      "  2%|▏         | 2/100 [00:00<00:06, 15.25it/s, Loss: 0.5434966996569788]"
+      "100%|██████████| 100/100 [00:16<00:00,  6.14it/s, Loss: 0.38553561776474443]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.3807133304939646]"
      ]
     },
     {
@@ -1873,8 +1874,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:17<00:00,  5.72it/s, Loss: 0.5567320547470468]\n",
-      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.5474983564940133]"
+      "100%|██████████| 100/100 [00:17<00:00,  5.71it/s, Loss: 0.38378761553618035]\n",
+      "  2%|▏         | 2/100 [00:00<00:05, 18.96it/s, Loss: 0.37902375457512416]"
      ]
     },
     {
@@ -1888,15 +1889,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:16<00:00,  6.00it/s, Loss: 0.5585986844613839]\n",
-      "  3%|▎         | 3/100 [00:00<00:04, 20.88it/s, Loss: 0.5449971921985703]"
+      "100%|██████████| 100/100 [00:15<00:00,  6.42it/s, Loss: 0.38249098800370906]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.37776994816791715]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    11: reducing learning rate of group 0 to 2.5000e-01.\n",
       "Epoch 11\n"
      ]
     },
@@ -1904,14 +1904,194 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 78%|███████▊  | 78/100 [00:14<00:06,  3.42it/s, Loss: 0.543146003252798] "
+      "100%|██████████| 100/100 [00:16<00:00,  5.91it/s, Loss: 0.38145649962807937]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.379380338455498]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:17<00:00,  5.85it/s, Loss: 0.38060052662750365]\n",
+      "  2%|▏         | 2/100 [00:00<00:06, 16.24it/s, Loss: 0.3759454802311301]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 13\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:15<00:00,  6.60it/s, Loss: 0.379883279730154] \n",
+      "  1%|          | 1/100 [00:00<00:11,  8.61it/s, Loss: 0.37782274466038673]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:17<00:00,  5.68it/s, Loss: 0.37927846102945406]\n",
+      "  3%|▎         | 3/100 [00:00<00:04, 20.80it/s, Loss: 0.37236966449118314]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:14<00:00,  6.83it/s, Loss: 0.378763993291097] \n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.3767111696031047]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:15<00:00,  6.52it/s, Loss: 0.378320967565193] \n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.37626891050706657]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 17\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:15<00:00,  6.58it/s, Loss: 0.37793408899996483]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.37588137106119707]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    18: reducing learning rate of group 0 to 2.5000e-03.\n",
+      "Epoch 18\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:16<00:00,  6.11it/s, Loss: 0.3776411457331603]\n",
+      "  3%|▎         | 3/100 [00:00<00:05, 19.19it/s, Loss: 0.37079249739611986]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:15<00:00,  6.44it/s, Loss: 0.3774901376818776]\n",
+      "  1%|          | 1/100 [00:00<00:17,  5.68it/s, Loss: 0.3754329695624512]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:17<00:00,  5.57it/s, Loss: 0.3773394255023435]\n",
+      "  2%|▏         | 2/100 [00:00<00:06, 15.92it/s, Loss: 0.37275910846229043]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 21\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:15<00:00,  6.57it/s, Loss: 0.3771915805261168]\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.3751289942189844]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    22: reducing learning rate of group 0 to 1.2500e-03.\n",
+      "Epoch 22\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  9%|▉         | 9/100 [00:01<00:17,  5.11it/s, Loss: 0.3727859589717707] \n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-100-6c9b0d3f39f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m       \u001b[0mavg_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbeta\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mavg_loss\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m       \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_postfix_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Loss: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mavg_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m       \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m       \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/specific/scratches/scratch/guy/miniconda/lib/python3.8/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    193\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m         \"\"\"\n\u001b[0;32m--> 195\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    196\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/specific/scratches/scratch/guy/miniconda/lib/python3.8/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     95\u001b[0m         \u001b[0mretain_graph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m     Variable._execution_engine.run_backward(\n\u001b[0m\u001b[1;32m     98\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m         allow_unreachable=True)  # allow_unreachable flag\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "\n",
     "attConv = AttentionConverter()\n",
-    "optimizer = torch.optim.Adam(attConv.parameters(), lr = 1)\n",
+    "optimizer = torch.optim.Adam(attConv.parameters(), lr = 5e-3)\n",
     "criterion = nn.KLDivLoss(reduction = 'batchmean')\n",
     "avg_loss = None\n",
     "beta = 0.95\n",
