--- a/attentions-first-time.ipynb
+++ b/attentions-first-time.ipynb
@@ -63,9 +63,8 @@
     },
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
-    "id": "f6nEbhZs5lwe",
-    "scrolled": true
+    "collapsed": true,
+    "id": "f6nEbhZs5lwe"
    },
    "outputs": [
     {
@@ -119,7 +118,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "heading_collapsed": true,
     "id": "4hPNjtF95lxA"
    },
    "source": [
@@ -136,7 +134,6 @@
     },
     "colab_type": "code",
     "collapsed": false,
-    "hidden": true,
     "id": "UsNuEmiI5lxB",
     "outputId": "b66d4df4-b45a-4b82-dad1-0d449d98788b"
    },
@@ -166,7 +163,6 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": false,
-    "hidden": true,
     "id": "H144hSbF5lxD"
    },
    "outputs": [
@@ -270,12 +266,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "heading_collapsed": true,
-    "hidden": true,
     "id": "q0grNoXN5lxJ"
    },
    "source": [
-    "#### Update Transformers"
+    "### Update Transformers"
    ]
   },
   {
@@ -285,7 +279,6 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
-    "hidden": true,
     "id": "Q_l4MeVn5lxK",
     "outputId": "d4b622c8-8fa6-40c8-aabc-c7fd94ba1f98"
    },
